# tetris

./: CMakeLists.txt  LICENSE  README.md  tetris.cpp
include/: config.h.in
src/: tetris.cpp
